<resources>
    <string name="app_name">ABCPokemon</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="facebook">Facebook</string>
    <string name="email">E-mail</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="not_email">Email not informed :(</string>
    <string name="invalid_mail">Not a valid email address :(</string>
    <string name="not_user">User not informed :(</string>
    <string name="not_password">Password not informed :(</string>
    <string name="successful_register">Register Successful :)</string>
    <string name="successful_login">Login Successful :)</string>
    <string name="register">Register</string>
    <string name="invalid_user">Invalid User :(</string>
    <string name="invalid_password">Invalid Password :(</string>
    <string name="fast_game">Fast Game</string>
    <string name="profile">Profile</string>
    <string name="campaign">Campaign</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="social_media">Social Media</string>
    <string name="change_photo">Change Icon</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change E-mail</string>
    <string name="change_icon">Change Icon</string>
    <string name="change_language">Change Language</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="new_email">New E-mail</string>
    <string name="confirm_new_email">Confirm E-mail</string>
    <string name="select_icon">Select Icon</string>
    <string name="search_in_your_phone">Choose on Phone</string>
    <string name="select_language">Select Language</string>
    <string name="confirm">Confirm</string>
    <string name="returnbtn">Return</string>
    <string name="Sobre_o_app">PokemonABC is an educational application. Our goal is through an interactive game to stimulate the child to associate and learn the alphabet in a fun way.</string>
    <string name="ingles">English</string>
    <string name="portugues">Portuguese</string>

</resources>
