<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_aemail"
    tools:context=".fragments.AlterarEmailFragment">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/background_bottom_radius"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_pokeball"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_email"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>

            <EditText
                android:id="@+id/newEmail"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:textColor="@color/colorWhite"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:background="@drawable/button_radius_two"
                android:backgroundTint="@color/edittext_dark_blue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_pokeball"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_new_email"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/confirmNewEmail"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:textColor="@color/colorWhite"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/button_radius_two"
            android:backgroundTint="@color/edittext_dark_blue"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirmNemail"
            android:layout_marginTop="32dp"
            android:layout_width="200dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/light_blue_background"
            android:background="@drawable/button_radius_two"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:text="@string/confirm"/>

    </LinearLayout>

</FrameLayout>