<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_asenha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.AlterarSenhaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/background_bottom_radius"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_pokeball" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/new_password"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_radius_two"
                    android:backgroundTint="@color/edittext_dark_blue"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_pokeball" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/confirm_new_password"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/confirmNewPassword"
                    android:layout_width="230dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_radius_two"
                    android:backgroundTint="@color/edittext_dark_blue"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirmarSenha"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@drawable/button_radius_two"
                android:backgroundTint="@color/light_blue_background"
                android:gravity="center"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>