<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sec"
    android:fillViewport="true"
    tools:context=".menu_perfil.MenuPerfilActivity">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlayBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:fontFamily="@font/roboto_font"
                android:textSize="13sp"
                app:popupTheme="@style/AppTheme.PopupOverlayBlue" />

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/conteudoTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_top_radius"
                    android:backgroundTint="@color/light_blue_background"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:src="@mipmap/ic_face_pikachu"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="Olá, Usuário"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/conteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@drawable/background_bottom_radius"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/ic_pokeball" />

                            <TextView
                                android:id="@+id/editProfileMP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/edit_profile"
                                android:textColor="@color/colorWhite"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/ic_pokeball" />

                            <TextView
                                android:id="@+id/aboutUsMP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/about_us"
                                android:textColor="@color/colorWhite"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/ic_pokeball" />

                            <TextView
                                android:id="@+id/exitMP"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/exit"
                                android:textColor="@color/colorWhite"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>